--- a/css/BreadCrumb.css
+++ b/css/BreadCrumb.css
@@ -34,9 +34,10 @@
 	display: block;
 	height: 21px;
 	overflow: hidden;
-	width: 99%;
-	padding:5px;
-	border:solid 1px #dedede;
+	width:100%;
+	padding:5px 0;
+	border-top:1px solid #dedede;
+	border-bottom:1px solid #dedede;
 	background:#fff;
 }
 .breadCrumb ul
