FIX: part of the breadcrumb was hidden when using theme 'md'

--- a/css/BreadCrumb.css
+++ b/css/BreadCrumb.css
@@ -25,7 +25,13 @@
 
 /* Breadcrumb Styles
  ---------------------------------------------------------------------*/
-
+.breadCrumbHolder.md{
+	position:relative;
+	top:-12px;
+}
+.breadCrumbHolder.md .breadCrumb{
+	padding-left:15px;
+}
 .breadCrumb
 {
 	margin: 0;
